# bejo-ai

bejo_be/: .env.example  .gitignore  README.md  bugs.md  main.py  pyproject.toml
bejo_be/app/: main.py
bejo_be/app/api/: chat.py  health.py  knowledge.py
bejo_be/app/api/routes/: chat.py  health.py  knowledge.py
bejo_be/app/config/: settings.py
bejo_be/app/core/: agent.py  config.py  exceptions.py  isa95_tools.py  logging.py  retrieval.py  tools.py
bejo_be/app/crew/: main.py
bejo_be/app/crew/agents/: data_analyst.py  data_visualization.py
bejo_be/app/crew/tasks/: data_visualization.py
bejo_be/app/crew/tools/: database.py
bejo_be/app/models/: requests.py  responses.py
bejo_be/app/services/: agent.py  chat_history.py  dependencies.py  document_loader.py  embedding.py  vectors.py
bejo_be/app/utils/: exceptions.py  helpers.py  logging.py
