[project]
name = "bejo-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai[tools]>=0.114.0",
    "docx2txt>=0.9",
    "google-generativeai",
    "ipykernel>=6.29.5",
    "langchain-community>=0.3.22",
    "ollama>=0.4.8",
    "pymysql>=1.1.1",
    "uvicorn>=0.34.2",
]
