[project]
name = "bejo-be"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "crewai[tools]>=0.114.0",
    "docx2txt>=0.9",
    "google-generativeai",
    "ipykernel>=6.29.5",
    "langchain>=0.3.24",
    "langchain-community>=0.3.22",
    "langchain-docling>=0.2.0",
    "langchain-google-genai>=2.0.10",
    "langchain-groq>=0.3.2",
    "langchain-ollama>=0.3.2",
    "langchain-qdrant>=0.2.0",
    "langgraph>=0.4.2",
    "ollama>=0.4.8",
    "pymysql>=1.1.1",
    "qdrant-client>=1.14.2",
    "uvicorn>=0.34.2",
]
